WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320713
XMLHttpRequest::memoryCost() ignores binary response data
https://bugs.webkit.org/show_bug.cgi?id=320713
Summary
XMLHttpRequest::memoryCost() ignores binary response data
Ahmad Saleem
Reported
2026-07-30 21:35:45 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-30 21:36:07 PDT
<
rdar://problem/183699140
>
Ahmad Saleem
Comment 2
2026-07-30 21:37:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70582
EWS
Comment 3
2026-08-02 19:03:09 PDT
Committed
318421@main
(fe933794faba): <
https://commits.webkit.org/318421@main
> Reviewed commits have been landed. Closing PR #70582 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug