XMLHttpRequest::memoryCost() ignores binary response data https://bugs.webkit.org/show_bug.cgi?id=320713 rdar://183699140

Reviewed by Chris Dumez.

memoryCost() only counted m_responseBuilder, the decoded-text buffer.
"arraybuffer" and "blob" responses accumulate into m_binaryResponseBuilder
instead, so they reported 0 to Heap::reportExtraMemoryAllocated() at DONE
and applied no GC pressure. Sum both buffers; didReceiveData() populates
exactly one of them per response type, so nothing is double counted.

No new tests, as memoryCost() has no web-exposed observable -- its only
consumer is a JSC GC heuristic.

* Source/WebCore/xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::memoryCost const):

Canonical link: https://commits.webkit.org/318421@main